--- a/package.json
+++ b/package.json
@@ -3,31 +3,41 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "nodemon --inspect index.ts",
-    "test": "jest"
+    "start": "npm run build && NODE_ENV=production node dist/src/app.js",
+    "dev": "NODE_ENV=development nodemon --inspect src/app.ts",
+    "test": "NODE_ENV=test jest --runInBand",
+    "migrate": "npm run migrate:test & npm run migrate:dev & npm run migrate:prod",
+    "migrate:test": "knex migrate:latest --env test",
+    "migrate:dev": "knex migrate:latest --env development",
+    "migrate:prod": "knex migrate:latest --env production",
+    "rollback": "npm run rollback:test & npm run rollback:dev & npm run rollback:prod",
+    "rollback:test": "knex migrate:rollback --env test",
+    "rollback:dev": "knex migrate:rollback --env development",
+    "rollback:prod": "knex migrate:rollback --env production"
   },
   "repository": {
     "type": "git",
     "url": "git@me.github.com:kraftjs/url-shortener.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Jason Kraft",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.95.6",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
+    "@sinonjs/fake-timers": "^7.1.2",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.23",
     "jest": "^27.0.4",
+    "nock": "^13.1.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
 }
