--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@sinonjs/fake-timers": "^7.1.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/node": "^15.14.0",
     "jest": "^27.0.4",
     "nock": "^13.1.0",
     "nodemon": "^2.0.7",
