Update knex database setup

--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "url-shortener",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "npm run build && NODE_ENV=production node dist/src/app.js",
-    "dev": "NODE_ENV=development nodemon --inspect src/app.ts",
+    "start": "npm run build && NODE_ENV=production node dist/src/server.js",
+    "dev": "NODE_ENV=development nodemon --inspect src/server.ts",
     "test": "NODE_ENV=test jest --runInBand",
-    "migrate": "npm run migrate:test & npm run migrate:dev & npm run migrate:prod",
-    "migrate:test": "knex migrate:latest --env test",
-    "migrate:dev": "knex migrate:latest --env development",
-    "migrate:prod": "knex migrate:latest --env production",
-    "rollback": "npm run rollback:test & npm run rollback:dev & npm run rollback:prod",
-    "rollback:test": "knex migrate:rollback --env test",
-    "rollback:dev": "knex migrate:rollback --env development",
-    "rollback:prod": "knex migrate:rollback --env production"
+    "migrate": "npm run migrate:test & npm run migrate:dev",
+    "migrate:test": "knex migrate:latest --knexfile knexfile.ts --env test",
+    "migrate:dev": "knex migrate:latest --knexfile knexfile.ts --env development",
+    "rollback": "npm run rollback:test & npm run rollback:dev",
+    "rollback:test": "knex migrate:rollback --knexfile knexfile.ts --env test",
+    "rollback:dev": "knex migrate:rollback --knexfile knexfile.ts --env development"
   },
   "repository": {
     "type": "git",
