--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@sinonjs/fake-timers": "^7.1.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.14.0",
+    "@types/supertest": "^2.0.11",
     "jest": "^27.0.4",
     "nock": "^13.1.0",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
