--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.6",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@sinonjs/fake-timers": "^7.1.2",
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.14.0",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.6.3",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
