--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start": "npm run build && NODE_ENV=production node dist/src/server.js",
-    "dev": "NODE_ENV=development nodemon src/server.ts",
+    "clean": "rimraf dist",
+    "sass": "sass --no-source-map src/public/sass/index.scss src/public/css/styles.css",
+    "copyfiles": "copyfiles -u 1 \"./src/**/*.{css,handlebars}\" dist",
+    "build": "npm run clean && npm run sass && tsc -p tsconfig.json && npm run copyfiles",
+    "start": "npm run build && NODE_ENV=production node dist/server.js",
+    "start:dev": "npm run build && NODE_ENV=development node dist/server.js",
+    "dev": "npm run sass && NODE_ENV=development nodemon src/server.ts",
     "test": "NODE_ENV=test jest --runInBand",
     "migrate": "npm run migrate:test & npm run migrate:dev",
-    "migrate:test": "knex migrate:latest --knexfile knexfile.ts --env test",
-    "migrate:dev": "knex migrate:latest --knexfile knexfile.ts --env development",
+    "migrate:test": "knex migrate:latest --knexfile src/database/knexfile.ts --env test",
+    "migrate:dev": "knex migrate:latest --knexfile src/database/knexfile.ts --env development",
     "rollback": "npm run rollback:test & npm run rollback:dev",
-    "rollback:test": "knex migrate:rollback --knexfile knexfile.ts --env test",
-    "rollback:dev": "knex migrate:rollback --knexfile knexfile.ts --env development"
+    "rollback:test": "knex migrate:rollback --knexfile src/database/knexfile.ts --env test",
+    "rollback:dev": "knex migrate:rollback --knexfile src/database/knexfile.ts --env development"
   },
   "repository": {
     "type": "git",
@@ -37,8 +41,11 @@
     "@types/node": "^15.14.0",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
+    "copyfiles": "^2.4.1",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
+    "sass": "^1.36.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
