--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "sass": "sass --no-source-map src/public/sass/index.scss src/public/css/styles.css",
     "copyfiles": "copyfiles -u 1 \"./src/**/*.{css,svg,jpg,handlebars}\" dist",
     "build": "npm run clean && npm run sass && tsc -p tsconfig.json && npm run copyfiles",
-    "start": "npm run build && NODE_ENV=production node dist/server.js",
+    "start": "node dist/server.js",
     "start:dev": "npm run build && NODE_ENV=development node dist/server.js",
     "dev": "npm run sass && NODE_ENV=development nodemon src/server.ts",
     "test": "NODE_ENV=test jest --runInBand",
-    "migrate": "npm run migrate:test & npm run migrate:dev",
+    "migrate": "npm run migrate:test & npm run migrate:dev & npm run migrate:prod",
     "migrate:test": "knex migrate:latest --knexfile src/database/knexfile.ts --env test",
     "migrate:dev": "knex migrate:latest --knexfile src/database/knexfile.ts --env development",
-    "rollback": "npm run rollback:test & npm run rollback:dev",
+    "migrate:prod": "knex migrate:latest --knexfile src/database/knexfile.ts --env production",
+    "rollback": "npm run rollback:test & npm run rollback:dev & npm run rollback:prod",
     "rollback:test": "knex migrate:rollback --knexfile src/database/knexfile.ts --env test",
-    "rollback:dev": "knex migrate:rollback --knexfile src/database/knexfile.ts --env development"
+    "rollback:dev": "knex migrate:rollback --knexfile src/database/knexfile.ts --env development",
+    "rollback:prod": "knex migrate:rollback --knexfile src/database/knexfile.ts --env production"
   },
   "repository": {
     "type": "git",
@@ -44,6 +46,7 @@
     "@types/express-handlebars": "^5.3.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.14.0",
+    "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "copyfiles": "^2.4.1",
